--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.1",
+    "react-native-paper": "^5.12.3",
+    "react-native-vector-icons": "^10.1.0",
     "react-navigation": "^5.0.0",
     "react-redux": "^9.1.2"
   },
