--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/material-bottom-tabs": "^6.2.28",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "@react-navigation/stack": "^6.3.29",
@@ -19,9 +20,11 @@
     "react": "18.2.0",
     "react-native": "0.74.1",
     "react-native-paper": "^5.12.3",
+    "react-native-tab-view": "^3.5.2",
     "react-native-vector-icons": "^10.1.0",
     "react-navigation": "^5.0.0",
-    "react-redux": "^9.1.2"
+    "react-redux": "^9.1.2",
+    "react-native-pager-view": "6.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
